remove scraps of bad code + fix readability of login style files

--- a/app/assets/stylesheets/new.scss
+++ b/app/assets/stylesheets/new.scss
@@ -1,124 +1,110 @@
-
-
-body{
-  background-color: #65CCEF;
+body {
+    background-color: #65CCEF;
 }
 
-
-
-
-
-
-
-
 .signinform {
-	background-color: white;
-	margin-top: 0em;
-	box-shadow: 0 5px 5px -5px #333;
+    background-color: white;
+    margin-top: 0;
+    box-shadow: 0 5px 5px -5px #333;
 }
 
 .field label {
-	margin-left: 0.2em;
+    margin-left: 0.2em;
 }
 
 h1.signin {
-	text-align: center;
-	font-size: 2.5em;
-	margin: 0em 0em;
+    text-align: center;
+    font-size: 2.5em;
+    margin: 0;
 }
 
-
 #login-top-image {
-	width: 100%;
-	color: #1dcaff;
+    width: 100%;
+    color: #1dcaff;
 }
 
 .field input {
-	width: 80%;
-	margin-left: 10%;
-	margin-bottom: 1em;
-
+    width: 80%;
+    margin-left: 10%;
+    margin-bottom: 1em;
 }
+
 .formbundler {
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
 }
 
 .formbundler div.field {
-	width: 22%;
-	margin-left: 1em;
-	margin-bottom: 1em;
+    width: 22%;
+    margin-left: 1em;
+    margin-bottom: 1em;
 }
 
 .oppositekindlink {
-	margin-left: 1em;
-	font-size: 1.2em;
+    margin-left: 1em;
+    font-size: 1.2em;
 }
 
 .signininfo {
-	font-family: "Muli", sans-serif;
-	font-weight: bold;
-	font-size: 1.5em;
-	text-align: center;
-	color: #65CCEF;
+    font-family: "Muli", sans-serif;
+    font-weight: bold;
+    font-size: 1.5em;
+    text-align: center;
+    color: #65CCEF;
 }
 
 .formbundler a {
-	color: #1dcaff;
+    color: #1dcaff;
 }
 
 .formbundler a:hover {
-	color: black;
-	text-decoration: underline;
+    color: black;
+    text-decoration: underline;
 }
-
-@media (min-width: 768px) {
-}
-
+@media (min-width: 768px) {}
 @media (min-width: 900px) {
+    .signinform {
+        margin-top: 3em;
+    }
 
-	.signinform {
-		margin-top: 3em;
-	}
+    .brandactions input {
+        margin-top: 1.5em;
+    }
 
-	.brandactions input {
-		margin-top: 1.5em;
-	}
-.field input {
-		width: 55%;
-		margin-left: 0.5em;
-	}
+    .field input {
+        width: 55%;
+        margin-left: 0.5em;
+    }
 
-	.formbundler {
-		justify-content: flex-start;
-	}
+    .formbundler {
+        justify-content: flex-start;
+    }
 
-	.formbundler div.field,
-	.formbundler input {
-		margin-left: 0.5em;
+    .formbundler div.field,
+    .formbundler input {
+        margin-left: 0.5em;
+    }
+
+    .signincol {
+        height: 100vh;
+    }
 }
 
-	.signincol {
-		height: 100vh;
-	}
-
+#signinform-top {
+    padding-top: 70px;
 }
 
-#signinform-top{
-  padding-top: 70px;
-}
-
-
-.login-submit-button{
-  border-radius: 7px;
-  border: solid 4.5px;
-  transition: all 0.1s ease 0s;
-  color: white;
-  text-decoration: none;
-  background-color: #0084b4;
-  &:hover {
-    color: #65CCEF;
+.login-submit-button {
+    border-radius: 7px;
+    border: solid 4.5px;
+    transition: all 0.1s ease 0s;
+    color: white;
     text-decoration: none;
-  }
+    background-color: #0084b4;
+
+    &:hover {
+        color: #65CCEF;
+        text-decoration: none;
+    }
 }
